src/z80asm/z80asm2/t/20-preproc/expected/defvars_20.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_20.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defvars_20.asm...
t/20-preproc/input/defvars_20.asm:3:16: error: Unterminated expression after "*"
        var1 DS.B 1*
                   ^
# file: t/20-preproc/input/defvars_20.asm
EndOfLine	"\n"	7:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
